feat requirements.txt

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-DB_HOST = "localhost"
-#DB_USERNAME = "admin"
-#DB_PASSWORD = "1234"
-#BD_PORT = "5353"
+DB_HOST = "0.0.0.0"
+DB_NAME = "selectioncourse"
+DB_USERNAME = "selectioncourse"
+DB_PASSWORD = "selecti0nc0urse"
+BD_PORT = 5353
 SECRET_KEY = "9fJHr4Z8d2e-_,>u(bdyWK'*tB>$.A'N=xMN@QAQXOPFf;@@m]j,YQH:1a7c6b5"
 DEBUG_MODE = true
