--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,27 +14,31 @@ services:
       - db
   db:
     image: postgres:14.1-alpine
-    restart: on-faiuler
+    restart: on-failure
     volumes:
       - "db0:/var/lib/postgresql/selectioncourse"
     environment:
-      POSTGRES_USER=selectioncourse
-      POSTGRES_PASSWORD=$electi0nc0urse
+      - POSTGRES_USER=selectioncourse
+      - POSTGRES_PASSWORD=selecti0nc0urse
+    ports:
+      - "5353:5432"
+    networks:
+      - selectioncourse
   server:
     build: .
     restart: on-failure
     env_file:
       - .env
     environment:
-      DB_HOST: db
-      DB_USERNAME: ${DB_USERNAME}
-      DB_PASSWORD: ${DB_PASSWORD}
-      DB_NAME: ${DB_NAME}
-      DB_PORT: ${DB_PORT}
-      SECRET_KEY: ${SECRET_KEY}
-      DEBUG_MODE: true
+      - DB_HOST=db
+      - DB_USERNAME=${DB_USERNAME}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - DB_NAME=${DB_NAME}
+      - DB_PORT=${DB_PORT}
+      - SECRET_KEY=${SECRET_KEY}
+      - DEBUG_MODE=true
     ports:
-      - "8000:8000"
+      - "8080:8000"
     depends_on:
       - db
     expose:
@@ -48,8 +52,6 @@ services:
     environment:
       - MINIO_ACCESS_KEY=your_access_key
       - MINIO_SECRET_KEY=your_secret_key
-    volumes:
-      - ./data:/data
     command: server /data
 
 volumes:
