--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ django-filter==23.3
 djangorestframework==3.14.0
 Markdown==3.5
 psycopg2==2.9.9
+python-dotenv==1.0.0
 pytz==2023.3.post1
 sqlparse==0.4.4
 tzdata==2023.3
